<resources>
    <string name="app_name">Risk Seeker</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="invitado">Entrar como invitado</string>
    <string name="registro">Registrar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Permiso_Ubicacion_concedido">La aplicación esta utilizando su ubicación</string>
    <string name="Permiso_Ubicacion_denegado">No se concedio el permiso para la ubicación</string>
    <string name="activar">Activar Ubicación</string>
    <string name="mensaje_ubicacion">Debe activar la ubicación para continuar</string>
    <string name="boton_activar">activar</string>
    <string name="boton_noactivar">no activar</string>
    <string name="titulo_reportes">Reportes</string>
    <string name="tipo_reporte">Tipo de reporte</string>
    <string name="Información">Información del reporte:</string>
    <string name="ubicacion">Ubicación</string>
    <string name="descripcion">Ingrese una descripción del reporte</string>
    <string name="reporte_anonimo">Reporte anónimo</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="Seleccion_tipo">Selecciona una tipo de reporte</string>
    <string name="requerido">Requerido</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseñaConfirmacion">Confirmación Contraseña</string>
    <string name="IniciarSesión">Iniciar Sesión</string>
    <string name="Registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="contraminimo">La contraseña mínima es de 6 caracteres</string>
    <string name="correoexample">example.correo@gmail.com</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="titulo_registro">Registro</string>
    <string name="titulo_iniciosesion">Inicio de Sesión</string>
    <string name="title_activity_opcion_mapa">OpcionMapaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_content_desc">Mostrar opciones</string>
    <string name="RegistrarseGoogle">Google</string>
    <string name="formularioReporte">Ingreso Reporte</string>
    <string name="agregar">Agregar</string>
    <string name="descLogo">Logo risk seeker</string>
    <string name="fecha">fecha publicacion</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="perfil">Perfil</string>
    <string name="content_description_sesion">Cerrar sesion</string>
    <string name="cantidad_reportes">0</string>
    <string name="Cerrar_sesion">Cerrar Sesión</string>
    <string name="mensaje_cerrar_sesion">¿Esta seguro que desea cerrar sesión?</string>
    <string name="boton_cerrar">cerrar sesión</string>
    <string name="boton_nocerrar">Cancelar</string>
    <string name="error_datos_usuario">No se pudo obtener los datos del usuario</string>
    <string name="anonimo">Publicado de forma anónima</string>
    <string name="reporte_no_anonimo">Este reporte no es anónimo</string>
    <string name="reporte_si_anonimo">Este reporte es anónimo</string>
    <string name="reportes_cercanos">Reportes cercanos</string>
    <string name="Escribir_direccion">Buscar una dirección</string>
</resources>