<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/smartchameleon"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textSize="50sp"
                android:text="@string/app_name"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="245dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:contentDescription="Logo risk seeker"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:translationY="60dp"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_person_24"
                app:iconSize="28sp"
                android:fontFamily="sans-serif"
                android:onClick="CargarMapa"
                android:text="Nombre Usuario"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/invitado"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:text="@string/invitado"
                android:enabled="true"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:onClick="CargarMapa" />

            <Button
                android:id="@+id/inicio_sesion"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:onClick="iniciarSesion"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:text="@string/inicio_sesion" />

            <Button
                android:id="@+id/registro"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:onClick="Registrar"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:text="@string/registro" />

        </LinearLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>