<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="15dp"
        android:animateLayoutChanges="true"
        card_view:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FechaPublicacion_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/texto_secundario_2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/fecha"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/anonimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anonimo"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/texto_secundario"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                android:animateLayoutChanges="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/mainbackground1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ubicacion"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/texto_secundario"/>

                    <TextView
                        android:id="@+id/ubicacion_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                android:animateLayoutChanges="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/mainbackground1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_reporte"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/texto_secundario"/>

                    <TextView
                        android:id="@+id/tipoReporte_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                android:animateLayoutChanges="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/mainbackground1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Información"
                        android:textColor="@color/texto_secundario"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/reporte_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagenes_reporte_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>