<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/perfil"
            app:titleTextColor="@color/white"
            app:menu="@menu/opciones"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IniciarSesionActivity"
        android:orientation="vertical"
        android:background="@color/mainbackground"
        android:padding="8dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="15dp"
            android:animateLayoutChanges="true"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/idImagenPerfil"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_baseline_person_24_gris"
                    app:civ_border_color="@color/primario"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@color/mainbackground1" />

                <TextView
                    android:id="@+id/nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity = "center_horizontal"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_email_24" />

                        <TextView
                            android:id="@+id/correo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/correo"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/primario_oscuro" />

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_campaign_naranjo" />

                        <TextView
                            android:id="@+id/cantidad_reportes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/cantidad_reportes"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="8dp"
                    android:animateLayoutChanges="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    card_view:cardBackgroundColor="@color/mainbackground1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_reportes"
                            android:textSize="30sp"
                            android:gravity="center"
                            android:layout_margin="10dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:fontFamily="@font/smartchameleon"
                            android:textColor="@color/black"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/reportes_perfil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>





            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
