<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/reportes_cercano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="15dp"
        android:animateLayoutChanges="true"
        card_view:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FechaPublicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/texto_secundario_2"
                android:layout_marginTop="10dp"
                android:text="@string/fecha"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/idImagenPerfil"
                    android:layout_width="49dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_baseline_person_24_gris"
                    app:civ_border_color="@color/primario"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@color/mainbackground1" />

                <TextView
                    android:id="@+id/NombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:text="Nombre de usuario"
                    android:textColor="@color/texto_formulario"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                android:animateLayoutChanges="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/mainbackground1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_reporte"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/texto_secundario"/>

                    <TextView
                        android:id="@+id/tipoReporte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                android:animateLayoutChanges="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/mainbackground1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Información"
                        android:textColor="@color/texto_secundario"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/reporte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagenes_reporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>